--- a/config.toml
+++ b/config.toml
@@ -88,17 +88,17 @@ pygmentscodefencesguesssyntax = true
             weight = 1
             url = "posts/"
 
-    	    # [[languages.en.menu.main]]
-            # name = "About"
-            # weight = 2
-            # url = "about/"
-
-            # [[languages.en.menu.main]]
-            # name = "Projects"
-            # weight = 3
-            # url = "projects/"
+    	    [[languages.en.menu.main]]
+            name = "About"
+            weight = 2
+            url = "about/"
 
             [[languages.en.menu.main]]
-            name = "Contact me"
-            weight = 5
-            url = "contact/"
+            name = "Projects"
+            weight = 3
+            url = "projects/"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
